--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
 csv = "1.2"
+actix-web = "4"
 
 [features]
 # by default Tauri runs in production mode
