--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
 csv = "1.2"
 actix-web = "4"
+tokio = { version = "1.26.0", features = ["full"] }
 
 [features]
 # by default Tauri runs in production mode
