--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,10 +15,11 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
+tauri = { version = "1.2", features = ["dialog-all", "http-all", "shell-open"] }
 csv = "1.2"
 actix-web = "4"
-tokio = { version = "1.26.0", features = ["full"] }
+reqwest = "0.11.4"
+actix-cors = "0.6.4"
 
 [features]
 # by default Tauri runs in production mode
