--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["dialog-all", "http-all", "shell-open"] }
 csv = "1.2"
+reqwest = {verson = "0.11", features=["json"]}
+tokio = { version = "1.26.0", features = ["full"] }
 
 [features]
 # by default Tauri runs in production mode
