--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["dialog-all", "http-all", "shell-open"] }
+tauri = { version = "1.2", features = ["dialog-all", "http-all", "notification-all", "shell-open"] }
 csv = "1.2"
 reqwest = {verson = "0.11", features= ["json"] }
 tokio = { version = "1.26.0", features = ["full"] }
