--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,10 +15,9 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["dialog-all", "http-all", "notification-all", "shell-open", "updater","system-tray"] }
+tauri = { version = "1.2", features = ["dialog-all", "http-all", "notification-all", "shell-open", "system-tray", "updater"] }
 csv = "1.2"
-reqwest = {verson = "0.11", features= ["json"] }
-tokio = { version = "1.26.0", features = ["full"] }
+reqwest = {version = "0.11", features= ["json"] }
 futures = "0.3.27"
 
 [features]
